<resources>
    <string name="app_name">VED</string>
    <string name="title_activity_naviagation">Naviagation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry_record">EntryRecord</string>
    <string name="title_activity_exit_record">ExitRecord</string>
    <string name="title_activity_entry_register">EntryRegister</string>
    <string name="title_activity_exit_register">ExitRegister</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="person_image_school_desc">Person School Image</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="person_name">Name</string>
    <string name="person_mobile">Mobile Number</string>
    <string name="visit_purpose">Purpose of Visit</string>
    <string name="person_address">Address</string>
    <string name="register">Submit</string>
    <string name="studentName">Additional Details 1</string>
    <string name="studentDetails">Additional Details 2 </string>
    <string name="relation">Additional Details 3</string>
    <string name="play">Play Recording</string>
    <string name="forgetPassword">Forget Password ?</string>
</resources>
